--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Jeux Javascript</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Liste des Mini-Jeux</h1>
+    <div>
+        <a href="juste prix/justeprix.html">Le juste prix</a>
+    </div>
     
 </body>
 </html>
