add blank to "a"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Liste des Mini-Jeux</h1>
     <div>
-        <a href="juste prix/justeprix.html">Le juste prix</a>
+        <a href="juste prix/justeprix.html" target="_blank">Le juste prix</a>
     </div>
     
 </body>
