--- a/juste prix/justeprix.html
+++ b/juste prix/justeprix.html
@@ -20,8 +20,9 @@
     </div>
 
     <div id="resultDiv">
-
     </div>
+
+    <div id="timer" class="reboursDiv"></div>
     
     <script src="../juste prix/justeprix.js"></script>
 </body>
