création jeu du pendu

--- a/juste prix/justeprix.html
+++ b/juste prix/justeprix.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Juste Prix</title>
     <link rel="stylesheet" href="justeprix.css">
+    <link rel="stylesheet" href="../lib/confetti.css">
 </head>
 <body>
 
@@ -14,7 +15,7 @@
         <button id="beginGame">Commencer la partie</button>
     </div>
     
-    <div class="propalInput"> 
+    <div class="propalInput" id="GamePropalDiv"> 
         <input type="number" id="userPropalInput">
         <button id="ckeckPropalButton" class="buttonGo">Go</button>
     </div>
