--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <div>
         <a href="juste prix/justeprix.html" target="_blank">Le juste prix</a>
     </div>
+
+    <div>
+        <a href="pendu/pendu.html" target="_blank">Le jeu du pendu</a>
+    </div>
     
 </body>
 </html>
